--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ ab-research-notes.docx
 *.pe*
 *.po*
 *.log
+ab40/system/production-t-40r-400-ranks/
+ab40/system/production-t-40r-800-ranks/
+ab40/system/production-t-80r-400-ranks/
+ab40/system/production-t-80r-800-ranks/
+ab40/system/production-t-120r-600-ranks/
+ab40/system/production-t-120r-1200-ranks/
