--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ ab40/system/production-t-80r-400-ranks/
 ab40/system/production-t-80r-800-ranks/
 ab40/system/production-t-120r-600-ranks/
 ab40/system/production-t-120r-1200-ranks/
+COLVAR_FOR_SIGMA
+*.gro
+#*
